[project]
name = "api-letras-de-musicas"
version = "0.1.0"
description = ""
authors = [
    {name = "Robson",email = "robsonnfer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
